--- a/style.scss
+++ b/style.scss
@@ -310,7 +310,7 @@ pre {
 }
 
 .highlight {
-  background-color: $yellow;
+  background-color: $blue;
   padding: 2px 4px;
   border-radius: 3px;
 }
